# Horsch-F-and-E

./: .gitignore
.claude/: CLAUDE.md
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/: .env.example  .env.example.hpc_cli  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  DEPLOYMENT_INFO.md  DEPLOYMENT_SUMMARY.md  Dockerfile.api  Dockerfile.indexer  IMPLEMENTATION_STATUS.md  OPENSTACK_DEPLOYMENT.md  OPENWEBUI_SETUP.md  OPTION_COMPARISON.md  PHASE_1_IMPLEMENTATION.md  QUICKSTART_HPC_CLI.md  README.md  README_HPC_CLI.md  README_SCALABILITY.md  SYSTEM_OVERVIEW.md  api_requirements.txt  app-cred-hpc-openwebui-openrc.sh  docker-compose.local.yml  docker-compose.openwebui.yml  docker-compose.pipelines.yml  docker-compose.yml  example_questions.md  hpc_dr_function.py  hpc_dr_pipeline.py  indexer_requirements.txt  openwebui_function.py  openwebui_pipeline.py  pyproject.toml
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/api/: __init__.py  main.py
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/deploy/: IMPLEMENTATION_GUIDE.md
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/hpc_cli/: __init__.py  cli.py  config.py  version.py
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/indexer/: __init__.py  index_all.py
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/insomnia/: README.md  hpc-knowledgedb-insomnia.json
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/scripts/: build_images.sh  index_data.sh  push_images.sh  run_api_local.sh  start_openwebui.sh  start_services.sh
instantiations/hpc_ticket_knowledgedb/hpc_ticket_knowledgedb/ticketknowledgedb/: README_docs_scraper.md  analyze_tickets_clustering.py  cluster_tickets.py  combine_tickets.py  convert_to_jsonl.py  create_classification_dataset.py  deduplicate_tickets.py  download_docs.py  dynamic_topic_modeling.py  extract_rrze_contacts.py  fast_download_docs.py  plot_tickets_over_time.py  process_tickets.py  prompt  requirements.txt  restructure_json.py  sample_tickets.py  valcheck.py  validate_tickets.py  worker.py
services/pi_service/: .gitignore  DESCRIPTION.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  adding_new_recognizer_guide.md  anonymize_your_text_guide.md  code_flow.md  plugin_details.md  project_presentation_slides.md  pyproject.toml  test_as_library.py  test_flair_model_only_DE.py  test_flair_with_custom_phone_DE.py  test_flair_with_presidio_phone_DE.py  test_flair_with_transformer_EN.py  test_transformer_only_EN.py  test_with_phone_recognizer_EN.py  test_without_phone_EN.py
services/pi_service/Mermaid_files/: Step_1_plugin_system_structure.mermaid  Step_2_plugin_system_classes.mermaid
services/pi_service/examples/: README.md  advanced_usage.py  basic_usage.py  intermediate_usage.py
services/pi_service/examples/data/: sample_emails.json  sample_texts.json  sample_ticket.json
services/pi_service/examples/outputs/: anonymized_emails.json  anonymized_texts.json  anonymized_ticket.json
services/pi_service/user_configs/: service_config.json
(+1198 files in other folders)
